# WEB-HW-09

./: pyproject.toml
BeautifulSoup/: authors.json  main.py  parser.py  quotes.json  upload.py
Scrapy/: authors.json  models.py  parser.py  quotes.json
inspectionProfiles/: Project_Default.xml
