[tool.poetry]
name = "web9hw"
version = "0.1.0"
description = ""
authors = ["Dmyto Marchenko <d.i.marchenko@student.khai.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scrapy = "^2.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
